feat: Added ChangeAvatar route
