# pkg/handler/PatchUserAvatarInput.go
@@ -1,0 +1,5 @@
+package handler
+
+type PatchUserAvatarInput struct {
+	Avatar string `json:"avatar"`
+}
